--- a/recipe.yml
+++ b/recipe.yml
@@ -2,7 +2,7 @@ name: Storm CMS Event
 description: Storm CMS Event
 recipes:
   - storm_cms_content_type_base
-modules:
+install:
   - datetime_range
   - geolocation_address
   - geolocation_leaflet
