Updated configurations for form display and view display.

--- a/config/field.field.node.event.body.yml
+++ b/config/field.field.node.event.body.yml
@@ -10,7 +10,7 @@ id: node.event.body
 field_name: body
 entity_type: node
 bundle: event
-label: Event Details
+label: 'Event Details'
 description: ''
 required: false
 translatable: true
