--- a/config/core.entity_form_display.node.event.default.yml
+++ b/config/core.entity_form_display.node.event.default.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.field.node.event.body
     - field.field.node.event.field_date_time
+    - field.field.node.event.field_featured_speakers
     - field.field.node.event.field_image
     - field.field.node.event.field_link
     - field.field.node.event.field_location
@@ -11,15 +12,86 @@ dependencies:
     - field.field.node.event.field_teaser
     - field.field.node.event.field_thumbnail
     - node.type.event
+    - workflows.workflow.editorial
   module:
     - address
     - content_moderation
-    - datetime_range
+    - custom_field
+    - field_group
     - link
     - media_library
     - metatag
     - path
+    - smart_date
     - text
+third_party_settings:
+  field_group:
+    group_event_content:
+      children:
+        - group_event_teaser
+        - group_event_details
+        - group_event_speaker
+      label: Content
+      region: content
+      parent_name: ''
+      weight: 1
+      format_type: tabs
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        direction: horizontal
+        width_breakpoint: 640
+    group_event_teaser:
+      children:
+        - field_teaser
+        - field_thumbnail
+      label: Teaser
+      region: content
+      parent_name: group_event_content
+      weight: 20
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: open
+        description: ''
+        required_fields: true
+    group_event_details:
+      children:
+        - field_date_time
+        - field_location
+        - field_image
+        - body
+        - field_link
+      label: Details
+      region: content
+      parent_name: group_event_content
+      weight: 21
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_event_speaker:
+      children:
+        - field_featured_speakers
+      label: Speaker(s)
+      region: content
+      parent_name: group_event_content
+      weight: 22
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -27,36 +99,58 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 10
     region: content
     settings:
-      rows: 9
+      rows: 15
       summary_rows: 3
       placeholder: ''
       show_summary: false
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   field_date_time:
-    type: daterange_default
-    weight: 123
+    type: smartdate_inline
+    weight: 7
     region: content
-    settings: {  }
+    settings:
+      modal: false
+      default_duration: 60
+      default_duration_increments: |-
+        30
+        60|1 hour
+        90
+        120|2 hours
+        custom
+      show_extra: false
+      hide_date: true
+      allday: true
+      remove_seconds: false
+      separator: to
+    third_party_settings: {  }
+  field_featured_speakers:
+    type: custom_stacked
+    weight: 5
+    region: content
+    settings:
+      label: true
+      wrapper: details
+      open: false
     third_party_settings: {  }
   field_image:
     type: media_library_widget
-    weight: 17
+    weight: 9
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_link:
     type: link_default
-    weight: 22
+    weight: 11
     region: content
     settings:
       placeholder_url: ''
@@ -64,7 +158,7 @@ content:
     third_party_settings: {  }
   field_location:
     type: address_default
-    weight: 122
+    weight: 8
     region: content
     settings:
       wrapper_type: fieldset
@@ -79,7 +173,7 @@ content:
     third_party_settings: {  }
   field_teaser:
     type: text_textarea
-    weight: 6
+    weight: 4
     region: content
     settings:
       rows: 3
@@ -87,57 +181,57 @@ content:
     third_party_settings: {  }
   field_thumbnail:
     type: media_library_widget
-    weight: 8
+    weight: 5
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   scheduler_settings:
-    weight: 50
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   simple_sitemap:
-    weight: 10
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 13
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -145,7 +239,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -154,7 +248,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
