--- a/config/core.entity_view_display.node.event.teaser.yml
+++ b/config/core.entity_view_display.node.event.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.body
     - field.field.node.event.field_date_time
+    - field.field.node.event.field_featured_speakers
     - field.field.node.event.field_image
     - field.field.node.event.field_link
     - field.field.node.event.field_location
@@ -28,6 +29,11 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
@@ -35,6 +41,7 @@ content:
     region: content
 hidden:
   field_date_time: true
+  field_featured_speakers: true
   field_image: true
   field_link: true
   field_location: true
