--- a/config/field.field.node.event.field_date_time.yml
+++ b/config/field.field.node.event.field_date_time.yml
@@ -5,16 +5,23 @@ dependencies:
     - field.storage.node.field_date_time
     - node.type.event
   module:
-    - datetime_range
+    - smart_date
 id: node.event.field_date_time
 field_name: field_date_time
 entity_type: node
 bundle: event
 label: 'Date & Time'
 description: ''
-required: true
+required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    default_duration: 60
+    default_duration_increments: "30\r\n60|1 hour\r\n90\r\n120|2 hours\r\ncustom"
+    default_date_type: next_hour
+    default_date: ''
+    min: ''
+    max: ''
 default_value_callback: ''
 settings: {  }
-field_type: daterange
+field_type: smartdate
