--- a/config/field.storage.node.field_featured_speakers.yml
+++ b/config/field.storage.node.field_featured_speakers.yml
@@ -2,46 +2,16 @@ langcode: en
 status: true
 dependencies:
   module:
-    - custom_field
     - node
 id: node.field_featured_speakers
 field_name: field_featured_speakers
 entity_type: node
-type: custom
+type: entity_reference
 settings:
-  columns:
-    name:
-      name: name
-      type: string
-      max_length: '255'
-      unsigned: 0
-      precision: '10'
-      scale: '2'
-      size: normal
-      datetime_type: datetime
-    bio:
-      name: bio
-      type: string_long
-      max_length: '255'
-      unsigned: 0
-      precision: '10'
-      scale: '2'
-      size: normal
-      datetime_type: datetime
-    picture:
-      name: picture
-      type: image
-      max_length: '255'
-      unsigned: 0
-      precision: '10'
-      scale: '2'
-      size: normal
-      datetime_type: datetime
-      target_type: file
-      uri_scheme: public
-module: custom_field
+  target_type: node
+module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
