--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "drupal/geolocation": "^3.13",
         "drupal/smart_date": "^4.1",
-        "specbee/storm_cms_content_type_base": "*"
+        "specbee/storm_cms_content_type_base": "*",
+        "specbee/storm_cms_person": "*"
     }
 }
