--- a/recipe.yml
+++ b/recipe.yml
@@ -7,6 +7,7 @@ install:
   - geolocation_address
   - geolocation_leaflet
   - smart_date
+  - addtocal_augment
 config:
   import:
     smart_date: '*'
