--- a/config/core.entity_form_display.node.event.default.yml
+++ b/config/core.entity_form_display.node.event.default.yml
@@ -20,6 +20,7 @@ dependencies:
     - link
     - media_library
     - metatag
+    - paragraphs
     - path
     - smart_date
     - text
@@ -132,14 +133,22 @@ content:
       separator: to
     third_party_settings: {  }
   field_featured_speakers:
-    type: entity_reference_autocomplete
+    type: paragraphs
     weight: 26
     region: content
     settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_image:
     type: media_library_widget
