--- a/config/field.storage.node.field_featured_speakers.yml
+++ b/config/field.storage.node.field_featured_speakers.yml
@@ -2,16 +2,18 @@ langcode: en
 status: true
 dependencies:
   module:
+    - entity_reference_revisions
     - node
+    - paragraphs
 id: node.field_featured_speakers
 field_name: field_featured_speakers
 entity_type: node
-type: entity_reference
+type: entity_reference_revisions
 settings:
-  target_type: node
-module: core
+  target_type: paragraph
+module: entity_reference_revisions
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
